--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   dio: ^3.0.10
   pin_code_fields: ^6.0.1
   provider: ^4.3.2+3
-
+  cached_network_image: ^2.4.1
 
 
 dev_dependencies:
