--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   pin_code_fields: ^6.0.1
   provider: ^4.3.2+3
   cached_network_image: ^2.4.1
+  pull_to_refresh: ^1.6.3
+
 
 
 dev_dependencies:
