--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   pull_to_refresh: ^1.6.3
   fluttertoast: ^7.1.5
   shared_preferences: ^0.5.12+4
-  google_sign_in: ^4.5.6
-  firebase_core: ^0.5.3
-  firebase_auth: ^0.18.4+1
+#  google_sign_in: ^4.5.6
+#  firebase_core: ^0.5.3
+#  firebase_auth: ^0.18.4+1
   google_fonts: ^1.1.1
   image_picker: ^0.6.7+17
   shimmer: ^1.1.2
