--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.6.7+17
   shimmer: ^1.1.2
   matrix_gesture_detector: ^0.1.0
+  url_launcher: ^5.7.10
 
 
 
@@ -65,6 +66,7 @@ flutter:
   assets:
     - assets/
     - assets/DealsBanners/
+    - assets/Banners/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
