--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   shimmer: ^1.1.2
   url_launcher: ^5.7.10
   razorpay_flutter: ^1.2.2
+  photo_view: ^0.10.3
+  flutter_spinkit: ^4.1.2+1
+  dio_http_cache: ^0.2.11
+
+
 
 
 
