--- a/flutter_app/android/app/build.gradle
+++ b/flutter_app/android/app/build.gradle
@@ -31,6 +31,13 @@ if (keystorePropertiesFile.exists()) {
 apply plugin: 'com.android.application'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'com.google.gms.google-services'
+// ... other imports
+
+apply plugin: 'com.google.firebase.crashlytics'
+
+android {
+    // ... your android config
+}
 
 android {
     compileSdkVersion 29
@@ -45,6 +52,9 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        ndk {
+            abiFilters "armeabi-v7a",'arm64-v8a', 'x86_64'
+        }
     }
     signingConfigs {
         release {
@@ -71,6 +81,9 @@ dependencies {
     // Add the dependency for the Firebase SDK for Google Analytics
     // When using the BoM, don't specify versions in Firebase dependencies
     implementation 'com.google.firebase:firebase-analytics'
+
+        // ... other dependencies
+
 
     // Add the dependencies for any other desired Firebase products
     // https://firebase.google.com/docs/android/setup#available-libraries
