--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.0.2+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -36,7 +36,6 @@ dependencies:
   fluttertoast: ^7.1.5
   shared_preferences: ^0.5.12+4
 #  google_sign_in: ^4.5.6
-#  firebase_core: ^0.5.3
 #  firebase_auth: ^0.18.4+1
   google_fonts: ^1.1.1
   image_picker: ^0.6.7+17
@@ -46,6 +45,20 @@ dependencies:
   photo_view: ^0.10.3
   flutter_spinkit: ^4.1.2+1
   dio_http_cache: ^0.2.11
+  package_info: ^0.4.3+2
+  firebase_crashlytics:
+  firebase_messaging:
+  firebase_core:
+  firebase_storage:
+  http_parser: ^3.1.4
+  hive: ^1.4.4+1
+  hive_flutter: ^0.3.1
+  sms_autofill: ^1.2.7
+  uni_links: ^0.4.0
+
+
+
+
 
 
 
